; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_graphics.c_gs_vertex2f.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_graphics.c_gs_vertex2f.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vec3 = type { i32 }

@.str = private unnamed_addr constant [9 x i8] c"gs_verte\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gs_vertex2f(float %0, float %1) #0 {
  %3 = alloca float, align 4
  %4 = alloca float, align 4
  %5 = alloca %struct.vec3, align 4
  store float %0, float* %3, align 4
  store float %1, float* %4, align 4
  %6 = call i32 @gs_valid(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %2
  br label %14

9:                                                ; preds = %2
  %10 = load float, float* %3, align 4
  %11 = load float, float* %4, align 4
  %12 = call i32 @vec3_set(%struct.vec3* %5, float %10, float %11, float 0.000000e+00)
  %13 = call i32 @gs_vertex3v(%struct.vec3* %5)
  br label %14

14:                                               ; preds = %9, %8
  ret void
}

declare dso_local i32 @gs_valid(i8*) #1

declare dso_local i32 @vec3_set(%struct.vec3*, float, float, float) #1

declare dso_local i32 @gs_vertex3v(%struct.vec3*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
